--- a/microblog/app/templates/500.html
+++ b/microblog/app/templates/500.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>An Unexpected Error Has Occurred</h1>
+    <h1>Error 500: An Unexpected Error Has Occurred</h1>
     <p>The administrator has been notified. Sorry for the inconvenience!</p>
     <p><a href="{{ url_for('index') }}">Take me home!</a></p>
 {% endblock %}
